force-app/main/default/objects/ONZB_actief__c/ONZB_actief__c.object-meta.xml
<CustomObject>
    <label>ONZB_actief</label>
    <nameField>
        <label>ONZB_actief_17-11-2021</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ONZB_actief</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>