force-app/main/default/objects/ONZB_actief__c/fields/block_mark__c.field-meta.xml
<CustomField>
    <fullName>block_mark__c</fullName>
    <label>block_mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>