force-app/main/default/objects/ONZB_actief__c/fields/cat_code__c.field-meta.xml
<CustomField>
    <fullName>cat_code__c</fullName>
    <label>cat_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>