force-app/main/default/objects/ONZB_actief__c/fields/complete_info_1__c.field-meta.xml
<CustomField>
    <fullName>complete_info_1__c</fullName>
    <label>complete_info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>