force-app/main/default/objects/ONZB_actief__c/fields/customer_no_1__c.field-meta.xml
<CustomField>
    <fullName>customer_no_1__c</fullName>
    <label>customer_no</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>