force-app/main/default/objects/ONZB_actief__c/fields/delivery_adr_id__c.field-meta.xml
<CustomField>
    <fullName>delivery_adr_id__c</fullName>
    <label>delivery_adr_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>