force-app/main/default/objects/ONZB_actief__c/fields/delivery_model__c.field-meta.xml
<CustomField>
    <fullName>delivery_model__c</fullName>
    <label>delivery_model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>