force-app/main/default/objects/ONZB_actief__c/fields/edition_id__c.field-meta.xml
<CustomField>
    <fullName>edition_id__c</fullName>
    <label>edition_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>