force-app/main/default/objects/ONZB_actief__c/fields/edition_type__c.field-meta.xml
<CustomField>
    <fullName>edition_type__c</fullName>
    <label>edition_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>