force-app/main/default/objects/ONZB_actief__c/fields/group_of_company__c.field-meta.xml
<CustomField>
    <fullName>group_of_company__c</fullName>
    <label>group_of_company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>