force-app/main/default/objects/ONZB_actief__c/fields/kind_order__c.field-meta.xml
<CustomField>
    <fullName>kind_order__c</fullName>
    <label>kind_order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>