force-app/main/default/objects/ONZB_actief__c/fields/mandator__c.field-meta.xml
<CustomField>
    <fullName>mandator__c</fullName>
    <label>mandator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>