force-app/main/default/objects/ONZB_actief__c/fields/order_date__c.field-meta.xml
<CustomField>
    <fullName>order_date__c</fullName>
    <label>order_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>