force-app/main/default/objects/ONZB_actief__c/fields/order_id__c.field-meta.xml
<CustomField>
    <fullName>order_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>order_id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>