force-app/main/default/objects/ONZB_actief__c/fields/order_mark__c.field-meta.xml
<CustomField>
    <fullName>order_mark__c</fullName>
    <label>order_mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>