force-app/main/default/objects/ONZB_actief__c/fields/order_no__c.field-meta.xml
<CustomField>
    <fullName>order_no__c</fullName>
    <label>order_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>