force-app/main/default/objects/ONZB_actief__c/fields/order_quantity__c.field-meta.xml
<CustomField>
    <fullName>order_quantity__c</fullName>
    <label>order_quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>