force-app/main/default/objects/ONZB_actief__c/fields/part_quantity__c.field-meta.xml
<CustomField>
    <fullName>part_quantity__c</fullName>
    <label>part_quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>