force-app/main/default/objects/ONZB_actief__c/fields/price_agreement_name__c.field-meta.xml
<CustomField>
    <fullName>price_agreement_name__c</fullName>
    <label>price_agreement_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>