force-app/main/default/objects/ONZB_actief__c/fields/processing_status_order__c.field-meta.xml
<CustomField>
    <fullName>processing_status_order__c</fullName>
    <label>processing_status_order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>