force-app/main/default/objects/ONZB_actief__c/fields/product_group__c.field-meta.xml
<CustomField>
    <fullName>product_group__c</fullName>
    <label>product_group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>