force-app/main/default/objects/ONZB_actief__c/fields/publishing_house__c.field-meta.xml
<CustomField>
    <fullName>publishing_house__c</fullName>
    <label>publishing_house</label>
    <length>255</length>
    <type>Text</type>
</CustomField>