force-app/main/default/objects/ONZB_actief__c/fields/publishing_house_department__c.field-meta.xml
<CustomField>
    <fullName>publishing_house_department__c</fullName>
    <label>publishing_house_department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>