force-app/main/default/objects/ONZB_actief__c/fields/serial__c.field-meta.xml
<CustomField>
    <fullName>serial__c</fullName>
    <label>serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>