force-app/main/default/objects/ONZB_actief__c/fields/short_title__c.field-meta.xml
<CustomField>
    <fullName>short_title__c</fullName>
    <label>short_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>