force-app/main/default/objects/ONZB_actief__c/fields/start_date_continuation__c.field-meta.xml
<CustomField>
    <fullName>start_date_continuation__c</fullName>
    <label>start_date_continuation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>